<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GauchoBlog</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome1">Powered by</string>
    <string name="welcome2">Networking</string>
    <string name="hello_message1">Hello.</string>
    <string name="hello_message2">Welcome to GauchoBlog.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="about">About</string>
    <string name="about_us">About Us</string>
    <string name="about_gauchoblog">About GauchoBlog</string>
    <string name="developers">Developers</string>
    <string name="about_us_description">GauchoBlog allows you to connect with friends and students at UC Santa Barbara. Using GauchoBlog, you can record multimedia microblogs on the fly. GauchoBlog allows you to zoom into any part of the campus and browse blogs at those locations. This can help better understand the campus and make decisions objectively. You can share and at the same time find real time information about available bike parking places in the campus and the level of bike congestion at those places.</string>
    <string name="saud_says">\"I am a Graduate student in the Electrical and Computer Engineering Department at UC Santa Barbara majoring in Computer Networks and minoring in Distributed Systems. I like to explore new opportunities, equally enjoy biking and listening to music and absolutely love developing Android applications. GauchoBlog is very close to my heart as I always wanted to do something for the students of UC Santa Barbara; bring them together and help them in every possible way. Hope you enjoy using it as much as I do.\"</string>
    <string name="ethan_says">\"I am a Graduate student studying Electrical and Computer Engineering at UC Santa Barbara focusing on Computer Networking.  GauchoBlog is my first attempt at creating a mobile application and it has been a fun experience.  I enjoy hiking (the views), good food, and friends.\"</string>
    <string name="aniruddha_says">\"Hi, I am Aniruddha, a Masters student in the Electrical and Computer Engineering Department at UC Santa Barbara majoring in Computer Networking. My interests include Computer Networks, Machine Learning and Data Science. In my free time, I like to get stuck in a Wikipedian Loop, enjoy playing cricket, go hiking and listen to music.\"</string>
    <string name="saud">Saud Shaikh</string>
    <string name="ethan">Ethan Preble</string>
    <string name="aniruddha">Aniruddha Mallya</string>
    <string name="university_name">UC Santa Barbara</string>
    <string name="all_rights_reserved">All Rights Reserved | GauchoBlog© | 2013</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_profile_picture">Tap to add a Profile Picture</string>
    <string name="choose_option">Choose Option</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_existing_photo">Choose Existing Photo</string>
    <string name="username_hint">Username</string>
    <string name="retype_password_hint">Retype Password</string>
    <string name="create_account">Create Account</string>
    <string name="continue_button">Continue</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_for_instructions">Please enter your email address to get instructions.</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="normal">N</string>
    <string name="hybrid">H</string>
    <string name="satellite">S</string>
    <string name="info">Info</string>
    <string name="blog_message">Blog Message</string>
    <string name="loading">Loading(&#8230;)</string>
    <string name="post_blog">Post</string>
    <string name="update">Update</string>
    <string name="open">Open</string>
    <string name="mild">Mild Congestion</string>
    <string name="heavy">Heavy Congestion</string>
    <string name="search">Search</string>
    <string name="addnewblog">Add New Blog</string>
    <string name="refresh">Refresh</string>
    <string name="overflow">Overflow</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="signout">Sign Out</string>
    <string name="search_hint">Search for Places</string>
    <string name="user_profile">Profile</string>
    <string name="user_profile_name">Username</string>
    <string name="user_email_address">Email Address</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_profile_picture">Tap to Change Picture</string>
    <string name="title_activity_edit_bike_rack_status">UPDATE STATUS</string>
    <string name="noblogposted">No blog has been posted yet. Be the first!</string>
    <string name="title_activity_sign_in">GauchoBlog</string>
    <string name="title_activity_about">GauchoBlog</string>
    <string name="title_activity_sign_up">GauchoBlog</string>
    <string name="title_activity_forgot_password">GauchoBlog</string>
    <string name="title_activity_email_sent">GauchoBlog</string>
    <string name="title_activity_account_created">GauchoBlog</string>
    <string name="title_activity_map">GauchoBlog</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_blog">GauchoBlog</string>
    <string name="title_activity_action_bar">GauchoBlog</string>
    <string name="title_activity_my_action_bar">GauchoBlog</string>
    <string name="title_activity_search_results">GauchoBlog</string>
    <string name="title_activity_user_profile">GauchoBlog</string>
    <string name="title_activity_new_blog">GauchoBlog</string>
    <string name="hello_world">Hello world!</string>

</resources>