<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About" >

    <!-- Header aligned to top -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#66CCFF"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/about_us"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- Footer aligned to bottom -->

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#66CCFF"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/all_rights_reserved"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:background="#FFFFFF"
        android:gravity="center" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/about_gauchoblog"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#666666" />
                
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/about_us_description"
                    android:textColor="#666666"
                    android:textSize="15sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/developers"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#666666" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true" >

                        <ImageView
                            android:id="@+id/saud_image"
                            android:layout_width="70dip"
                            android:layout_height="70dip"
                            android:src="@drawable/saud" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/saud_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="80dip"
                        android:text="@string/saud"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:typeface="sans" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/saud_name"
                        android:layout_below="@+id/saud_name"
                        android:paddingTop="20dp"
                        android:text="@string/university_name"
                        android:textColor="#666666"
                        android:textSize="15sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/saud_says"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#666666" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true" >

                        <ImageView
                            android:id="@+id/ethan_image"
                            android:layout_width="70dip"
                            android:layout_height="70dip"
                            android:src="@drawable/ethan" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/ethan_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="80dip"
                        android:text="@string/ethan"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:typeface="sans" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/ethan_name"
                        android:layout_below="@+id/ethan_name"
                        android:paddingTop="20dp"
                        android:text="@string/university_name"
                        android:textColor="#666666"
                        android:textSize="15sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/ethan_says"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#666666" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true" >

                        <ImageView
                            android:id="@+id/aniruddha_image"
                            android:layout_width="70dip"
                            android:layout_height="70dip"
                            android:src="@drawable/ani" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/aniruddha_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="80dip"
                        android:text="@string/aniruddha"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:typeface="sans" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/aniruddha_name"
                        android:layout_below="@+id/aniruddha_name"
                        android:paddingTop="20dp"
                        android:text="@string/university_name"
                        android:textColor="#666666"
                        android:textSize="15sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/aniruddha_says"
                    android:textColor="#666666"
                    android:textSize="15sp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>