<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" > 
     
    <LinearLayout
        android:id="@+id/layout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/image4" >
        
    </LinearLayout>
    
    <RelativeLayout
      android:id="@+id/header"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:background="#F2F2F2"      
      android:gravity="center" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="25dp" 
        android:layout_marginRight="25dp"
        android:text="@string/reset_password"
        android:textColor="#000000"
        android:textSize="20sp" />
    
  </RelativeLayout>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" >
         
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp" 
        android:layout_marginRight="25dp"
        android:text="@string/email_for_instructions"
        android:textColor="#000000"
        android:textSize="15sp" />
        
        <LinearLayout
        android:layout_height="25dp"
        android:layout_marginLeft="25dp" 
        android:layout_marginRight="25dp"
        android:layout_width="fill_parent"
        android:background="#00000000"/>
        
        <EditText
        android:id="@+id/email_for_reset"
        android:layout_width="fill_parent"
        android:layout_marginLeft="25dp" 
        android:layout_marginRight="25dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"        
        android:background="@drawable/recovery_email_shape"
        android:typeface="monospace" />
        
        <LinearLayout
        android:layout_height="25dp"
        android:layout_marginLeft="25dp" 
        android:layout_marginRight="25dp"
        android:layout_width="fill_parent"
        android:background="#00000000"/>
        
        <Button
        android:id="@+id/continue_button"
        android:layout_width="fill_parent"
        android:layout_marginLeft="25dp" 
        android:layout_marginRight="25dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:textStyle="bold"        
        android:textColor="#ffffff"  
        android:background="@drawable/sign_in_state" /> 
        
        <LinearLayout
        android:layout_height="50dp"
        android:layout_marginLeft="25dp" 
        android:layout_marginRight="25dp"
        android:layout_width="fill_parent"
        android:background="#00000000"/> 
                           
    </LinearLayout> 
    
</RelativeLayout>